# perpetcal-fw

./: CMakeLists.txt
main/: CMakeLists.txt  cal_main.cpp
main/comm/: cbr_siri_decoder.cpp  cbr_siri_decoder.hpp  config_manager.cpp  usb_cdc.cpp  usb_cdc.hpp  wifi_manager.cpp  wifi_manager.hpp
main/driver/: lhs154kc.c  lhs154kc.h  lvgl_wrapper.c  lvgl_wrapper.h
main/misc/: eternal.hpp  file_utils.hpp
main/protocol/: config_manager.cpp  config_manager.hpp  usb_cdc.cpp  usb_cdc.hpp
main/resource/: included_text.txt
main/storage/: config_manager.hpp
